--- a/pkbrightness.service
+++ b/pkbrightness.service
@@ -7,8 +7,8 @@ StartLimitIntervalSec=30
 Type=forking
 Restart=always
 RestartSec=1
-User=1000
-Group=1000
+User=YOUR_USER
+Group=YOUR_USER
 ExecStart=/usr/bin/python3 /home/YOUR_USER/PKBrightness/pkbrightness.py
 PIDFile=/home/YOUR_USER/.config/pkb/pkb.pid
 
