systemd: fixed typo

--- a/pkbrightness.service
+++ b/pkbrightness.service
@@ -8,7 +8,7 @@ Type=forking
 Restart=always
 RestartSec=1
 Environment=XAUTHORITY=/home/YOUR_USER/.Xauthority
-ExecStart=/usr/bin/python3 /home/YOUR_USER/PKBrightness/pkbrightness.py --config /home/YOUR_USER/.config/pkb/pkg.conf
+ExecStart=/usr/bin/python3 /home/YOUR_USER/PKBrightness/pkbrightness.py --config /home/YOUR_USER/.config/pkb/pkb.conf
 PIDFile=/home/YOUR_USER/.config/pkb/pkb.pid
 
 [Install]
