SystemD: updated target to "default.target"
The latest "multi-user.target" won't work as the script is executed as a user service

--- a/pkbrightness.service
+++ b/pkbrightness.service
@@ -1,7 +1,6 @@
 [Unit]
 Description=Keyboard brightness service
 Requires=dbus.socket
-Wants=xorg.target
 After=syslog.target
 
 [Service]
@@ -20,4 +19,4 @@ StandardError=syslog
 SyslogIdentifier=pkbrightnessd
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
